[package]
name = "cpace"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"

[dependencies]
curve25519-dalek = "3"
getrandom = "0.2"
strobe-rs = "0.6"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "cpace_bench"
harness = false
